[gd_scene load_steps=3 format=3 uid="uid://2kyfr0el6b73"]

[ext_resource type="PackedScene" uid="uid://dk6y0wglmsdsy" path="res://scene/office_level.tscn" id="1_83a4w"]
[ext_resource type="Script" path="res://script/main_menu.gd" id="2_isy2w"]

[node name="MainMenu" type="Node3D"]
script = ExtResource("2_isy2w")

[node name="office" parent="." instance=ExtResource("1_83a4w")]
script = null

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.938113, 0, -0.34633, 0, 1, 0, 0.34633, 0, 0.938113, -33.1278, 3.88881, 4.59638)
fov = 78.9144

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 37.0
offset_top = 28.0
offset_right = 107.0
offset_bottom = 129.0

[node name="play" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Play"

[node name="option" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Options"

[node name="quit" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Quit"

[connection signal="pressed" from="UI/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/quit" to="." method="_on_quit_pressed"]
